[gd_scene load_steps=21 format=3 uid="uid://gefqdpggguui"]

[ext_resource type="Script" path="res://player/player_original.gd" id="1_g4fjn"]
[ext_resource type="Texture2D" uid="uid://dum7mnymkkxn8" path="res://assets/art/characters/Doggo.png" id="2_vh55j"]
[ext_resource type="Script" path="res://characters/hit_box.gd" id="3_ayjt6"]
[ext_resource type="Script" path="res://characters/hurt_box.gd" id="4_vvn1n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofryw"]
size = Vector2(12, 12)

[sub_resource type="Animation" id="Animation_u3ikm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x2eg7"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qcnra"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_w7io6"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"create_walk_sound"
}, {
"args": [],
"method": &"create_walk_sound"
}]
}

[sub_resource type="Animation" id="Animation_hv1lj"]
resource_name = "wall_slide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k21ys"]
_data = {
"RESET": SubResource("Animation_u3ikm"),
"idle": SubResource("Animation_x2eg7"),
"jump": SubResource("Animation_qcnra"),
"walk": SubResource("Animation_w7io6"),
"wall_slide": SubResource("Animation_hv1lj")
}

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_57k2a"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_22mh7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bytl4"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_57k2a")
states/Idle/position = Vector2(353, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_22mh7")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_3dahj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmdhs"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avjbt"]
size = Vector2(10, 9)

[sub_resource type="Animation" id="Animation_k3kqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i0m7b"]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_invincible"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43647"]
_data = {
"RESET": SubResource("Animation_k3kqf"),
"blink": SubResource("Animation_i0m7b")
}

[node name="player_original" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource("1_g4fjn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_vh55j")
hframes = 8
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_ofryw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_k21ys")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_bytl4")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_3dahj")
parameters/Idle/blend_position = 0

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("3_ayjt6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
modulate = Color(0.980392, 0, 0.27451, 1)
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_qmdhs")

[node name="hurt_box" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("4_vvn1n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
modulate = Color(0.898039, 0.847059, 0, 1)
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_avjbt")

[node name="camera_follow" type="RemoteTransform2D" parent="."]

[node name="coyote_jump_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="blink_animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_43647")
}

[connection signal="area_entered" from="hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="hit_box" to="hit_box" method="_on_area_entered" flags=18]
[connection signal="hit" from="hurt_box" to="." method="_on_hurt_box_hit"]
